Some refactoring of gvirtus4a.